# advent-of-code-2023-ocaml

./: .ocamlformat  Makefile  aoc_2023_ocaml.opam  dune-project
day_00/: dune  main.ml
day_01/: main.ml
day_02/: dune  main.ml
day_03/: dune  main.ml
day_04/: dune  main.ml
day_05/: dune  input.txt  main.ml
lib/: dune  lib.ml
